[tool.poetry]
name = "titaniwoom"
version = "0.1.0"
description = "Titan of the automatic trading system through the Kiwoom API"
authors = [
  "minocrafft <minocrafft@gmail.com>",
  "heonjin <koun012@naver.com>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
